SimpleWeather: major bug fixes
* Use KeyUp event instead of KeyDown (fix possible double Enter pressed event)
* Cleanup Temperature Unit settings
* Refresh weather data if weather unit doesn't match Settings
* Fix errors with handling files
* Use ConfigureAwait(false) to avoid deadlocks in FileAccess
* Add function to check if file is in use

--- a/SimpleWeather/LocationsPage.xaml
+++ b/SimpleWeather/LocationsPage.xaml
@@ -137,7 +137,7 @@
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <TextBox x:Name="Location" FontSize="24" PlaceholderText="Enter Location..." KeyDown="Location_KeyDown" Grid.Column="0"/>
+                    <TextBox x:Name="Location" FontSize="24" PlaceholderText="Enter Location..." KeyUp="Location_KeyUp" Grid.Column="0"/>
                     <Button x:Name="Cancel" Content="Cancel" FontSize="18" Width="75" Height="48" Click="Cancel_Click" Grid.Column="1"/>
                 </Grid>
                 <Button x:Name="AddLocationsButton" HorizontalAlignment="Stretch" Margin="10,5" Click="AddLocationsButton_Click"
