--- a/SimpleWeather/MainPage.xaml
+++ b/SimpleWeather/MainPage.xaml
@@ -12,7 +12,7 @@
             <Image x:Name="AppLogo" VerticalAlignment="Center" Margin="0,0,0,0" Source="Assets/Square150x150Logo.png" />
         </Grid>
         <Grid Height="80" Margin="0,0,0,0" Padding="25,0" RequestedTheme="Dark" Name="SearchGrid">
-            <TextBox x:Name="Location" FontSize="24" PlaceholderText="Enter Location..." Margin="0,0,50,0" RequestedTheme="Light" VerticalAlignment="Center" KeyDown="Location_KeyDown"/>
+            <TextBox x:Name="Location" FontSize="24" PlaceholderText="Enter Location..." Margin="0,0,50,0" RequestedTheme="Light" VerticalAlignment="Center" KeyUp="Location_KeyUp"/>
             <Button Name="GPS" Height="44" Margin="0,0,6,0" Width="44" Click="GPS_Click" HorizontalAlignment="Right" ToolTipService.ToolTip="Find Location via GPS" VerticalAlignment="Center">
                 <Viewbox>
                     <SymbolIcon Symbol="MapPin" RequestedTheme="Dark"/>
